--- a/index.html
+++ b/index.html
@@ -231,5 +231,8 @@
   <script src="assets/theme/js/script.js"></script>
   
   <center> <iframe src="https://money.yandex.ru/quickpay/shop-widget?writer=seller&targets=%D0%B2%D1%8B&targets-hint=&default-sum=22&button-text=11&hint=&successURL=&quickpay=shop&account=410015041135417" width="450" height="170" frameborder="0" allowtransparency="true" scrolling="no"></iframe> </center>
-</body>
+  
+   <center> <iframe src="https://money.yandex.ru/quickpay/shop-widget?writer=seller&targets=%D0%B2%D1%8B&targets-hint=&default-sum=22&button-text=11&hint=&successURL=&quickpay=shop&account=410015041135417" width="450" height="170" frameborder="0" allowtransparency="true" scrolling="no"></iframe> </center>
+  
+  </body>
 </html>
